--- a/404.html
+++ b/404.html
@@ -51,7 +51,7 @@ hr {
   <div class="middle">
     <!-- <h1>COMING SOON</h1> -->
     <hr>
-    <p>For help contact: rushinth@email.com</p>
+    <p>For help contact: <a href="mailto: rushinth@dreameryestates.com">rushinth@dreameryestates.com</a></p>
   </div>
   <div class="bottomleft">
     <p>Some text</p>
